fix: step circles overflow left edge (#977)

--- a/apps/www/styles/globals.css
+++ b/apps/www/styles/globals.css
@@ -513,11 +513,12 @@
 
   .steps > h3 {
     counter-increment: steps;
+    @apply max-lg:relative max-lg:ps-8;
   }
 
   .steps > h3:before {
     @apply border-background bg-muted absolute inline-flex h-9 w-9 items-center justify-center rounded-full border-4 text-center -indent-px font-mono text-base font-medium;
-    @apply mt-[-4px] ml-[-50px];
+    @apply mt-[-4px] ml-[-50px] max-lg:ms-0 max-lg:-start-2;
     content: counter(steps);
   }
 
